[package]
name = "internet-status-reporter-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-std = { version = "1.10.0", features = ["attributes"] }
dotenv = "0.15.0"
sea-orm = { version = "0.6.0", features = ["runtime-async-std-rustls", "sqlx-mysql", "macros"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
tide = "0.16.0"
